--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
     <body>
-        <header class="studio-header">
-            <div class="container header-container">
-            <a class="studio-logo nounderline logocolor" href="./index.html">Web<span class="logo-nav">Studio</span></a>
-            <nav class="nav-panel">
+        <header class="header">
+            <div class="container header__container">
+            <a class="header__logo nounderline logocolor" href="./index.html">Web<span class="logo-nav">Studio</span></a>
+            <nav class="header__nav">
                 <ul class="nav-list nodots">
-                <li class="nav-list-item"><a class="nav-panel-link nounderline current" href="./index.html">Студия</a></li>
-                <li class="nav-list-item"><a class="nav-panel-link nounderline " href="./portfolio.html">Портфолио</a></li>
-                <li class="nav-list-item"><a class="nav-panel-link nounderline" href="./">Контакты</a></li>
+                <li class="nav-list-item"><a class="header__nav-link nounderline current" href="./index.html">Студия</a></li>
+                <li class="nav-list-item"><a class="header__nav-link nounderline " href="./portfolio.html">Портфолио</a></li>
+                <li class="nav-list-item"><a class="header__nav-link nounderline" href="./">Контакты</a></li>
                 </ul>
             </nav>
                 <ul class="header-contacts nodots">
                 <li class="header-contacts-item">
-                    <a class="nav-panel-contacts nounderline" href="mailto:info@devstudio.com">
+                    <a class="header__nav-contacts nounderline" href="mailto:info@devstudio.com">
                         <svg class="mail-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-mailico">
                             </use>
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li class="header-contacts-item">
-                    <a class="nav-panel-contacts nounderline" href="tel:+380961111111">
+                    <a class="header__nav-contacts nounderline" href="tel:+380961111111">
                         <svg class="tel-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-telico">
                             </use>
@@ -370,7 +370,7 @@
             <div class="container footer-container">
                 <div class="logo-adress-footer">
                 <div class="logo-customization">
-                <a class="studio-logo-footer nounderline logocolor" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+                <a class="header__logo-footer nounderline logocolor" href="./index.html">Web<span class="logo-footer">Studio</span></a>
                 </div>
                 <address class="footer-address">
                     <p class="footer-location">г. Киев, пр-т Леси Украинки, 26</p>
