--- a/portfolio.html
+++ b/portfolio.html
@@ -16,25 +16,25 @@
         <div class="container header__container">
         <a class="header__logo nounderline logocolor" href="./index.html">Web<span class="logo-nav">Studio</span></a>
         <nav class="header__nav">
-            <ul class="nav-list nodots">
-            <li class="nav-list-item"><a class="header__nav-link nounderline" href="./index.html">Студия</a></li>
-            <li class="nav-list-item"><a class="header__nav-link nounderline current" href="./portfolio.html">Портфолио</a></li>
-            <li class="nav-list-item"><a class="header__nav-link nounderline" href="./">Контакты</a></li>
+            <ul class="header__list nodots">
+            <li class="header__list-item"><a class="header__nav-link nounderline" href="./index.html">Студия</a></li>
+            <li class="header__list-item"><a class="header__nav-link nounderline current" href="./portfolio.html">Портфолио</a></li>
+            <li class="header__list-item"><a class="header__nav-link nounderline" href="./">Контакты</a></li>
             </ul>
         </nav>
-            <ul class="header-contacts nodots">
-            <li class="header-contacts-item">
+            <ul class="header__contacts nodots">
+            <li class="header__contacts-item">
                 <a class="header__nav-contacts nounderline" href="mailto:info@devstudio.com">
-                    <svg class="mail-icon" width="16" height="16">
+                    <svg class="header__mail" width="16" height="16">
                         <use href="./images/icons.svg#icon-mailico">
                         </use>
                     </svg>
                 info@devstudio.com
                 </a>
             </li>
-            <li class="header-contacts-item">
+            <li class="header__contacts-item">
                 <a class="header__nav-contacts nounderline" href="tel:+380961111111">
-                    <svg class="tel-icon" width="16" height="16">
+                    <svg class="header__tel" width="16" height="16">
                         <use href="./images/icons.svg#icon-telico">
                         </use>
                     </svg>
