--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <a class="header__logo nounderline logocolor" href="./index.html">Web<span class="logo-nav">Studio</span></a>
             <nav class="header__nav">
                 <ul class="header__list nodots">
-                <li class="header__list-item"><a class="header__nav-link nounderline current" href="./index.html">Студия</a></li>
-                <li class="header__list-item"><a class="header__nav-link nounderline " href="./portfolio.html">Портфолио</a></li>
-                <li class="header__list-item"><a class="header__nav-link nounderline" href="./">Контакты</a></li>
+                <li class="header__item"><a class="header__link nounderline current" href="./index.html">Студия</a></li>
+                <li class="header__item"><a class="header__link nounderline " href="./portfolio.html">Портфолио</a></li>
+                <li class="header__item"><a class="header__link nounderline" href="./">Контакты</a></li>
                 </ul>
             </nav>
                 <ul class="header__contacts nodots">
                 <li class="header__contacts-item">
-                    <a class="header__nav-contacts nounderline" href="mailto:info@devstudio.com">
+                    <a class="header__contacts nounderline" href="mailto:info@devstudio.com">
                         <svg class="header__mail" width="16" height="16">
                             <use href="./images/icons.svg#icon-mailico">
                             </use>
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li class="header__contacts-item">
-                    <a class="header__nav-contacts nounderline" href="tel:+380961111111">
+                    <a class="header__contacts nounderline" href="tel:+380961111111">
                         <svg class="header__tel" width="16" height="16">
                             <use href="./images/icons.svg#icon-telico">
                             </use>
