--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <!--Pros-->
             <section class="pros-section">
                 <div class="container pros-container">
-                <h2 class="stealth">Почему стоит обратить на нас внимание?</h2>
+                <h2 class="visually-hidden">Почему стоит обратить на нас внимание?</h2>
                 <ul class="pros-list nodots">
                     <li class="pros-list-item">
                         <div class="pros-svg">
@@ -516,7 +516,7 @@
                         <input
                         type="checkbox"
                         id="policy"
-                        class="modal-checkbox stealth"/>
+                        class="modal-checkbox visually-hidden"/>
 
                         <label for="policy" class="checkbox-label">
                             Соглашаюсь с рассылкой и принимаю &nbsp;<a class="policy-click" href="#">Условия договора</a>
