--- a/portfolio.html
+++ b/portfolio.html
@@ -46,8 +46,8 @@
     <main class="portfolion-main">
         <section class="portfolio-content">
         <div class="container">
-        <h1 class="stealth">Наши проекты</h1>
-        <h2 class="stealth">Панель фильтрации проектов</h2>
+        <h1 class="visually-hidden">Наши проекты</h1>
+        <h2 class="visually-hidden">Панель фильтрации проектов</h2>
         
         <ul class="filter-btn-list nodots">
             <li class="button-customization"><button class="filter-btn" type="button">Все</button></li>
@@ -57,7 +57,7 @@
             <li class="button-customization"><button class="filter-btn" type="button">Маркетинг</button></li>
         </ul>
 
-        <h2 class="stealth">Список проектов</h2>
+        <h2 class="visually-hidden">Список проектов</h2>
 
         <ul class="project-list nodots">
             <li class="project-list-item">
